--- a/css/search.css
+++ b/css/search.css
@@ -123,5 +123,5 @@
   font-weight: bold;
   margin-left: 20px;
   margin-top: 20px;
-  marginb-bottom: 20px;
+  margin-bottom: 20px;
 }
